# loa-hounfour

./: .gitignore  .gitmodules  .loa-version.json  .loa.config.yaml  .loa.config.yaml.example  BUTTERFREEZONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE.md  MIGRATION.md  PROCESS.md  README.md  RELEASE-INTEGRITY.json  SCHEMA-CHANGELOG.md  SCHEMA-EVOLUTION.md  SECURITY.md  V4-PLANNING.md  eileendailyimplementationagentmodeagent.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: checksums.json  settings.local.json
.github/: dependabot.yml  pull_request_template.md
.run/: bridge-state.json  simstim-state.json  sprint-plan-state.json
app/: README.md
constraints/: AccessPolicy.constraints.json  AgentCapacityReservation.constraints.json  AgentEstate.constraints.json  AgentEstateStatus.constraints.json  AgentIdentity.constraints.json  Assertion.constraints.json  AssertionClass.constraints.json  AssertionStatus.constraints.json  AuditTimestamp.constraints.json  AuditTrail.constraints.json  AuditTrailEntry.constraints.json  BasketComposition.constraints.json  BillingEntry.constraints.json  BridgeTransferSaga.constraints.json  BudgetScope.constraints.json  CanonicalRun.constraints.json  ChainBoundHash.constraints.json  Challenge.constraints.json  ClusterRunSeries.constraints.json  CollectionGovernanceConfig.constraints.json  CollectionScoreUpdatedPayload.constraints.json  CommitmentRoot.constraints.json  CommitmentType.constraints.json  (+123 more)
vectors/runners/rust/: Cargo.toml  README.md
vectors/runners/rust/src/: main.rs
(+2374 files in other folders)
